--- a/index.html
+++ b/index.html
@@ -1,15 +1,118 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" type="image/png" href="descargas/logo.png">
-	<title>PORTAFOLIO DE EVIDENCIAS</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portafolio de evidencias</title>
+    <link rel="icon" href="logo.png" type="image/png"> <!--logo-->
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+
+        header {
+            background-color: #002d72;
+            color: white;
+            padding: 10px 0;
+            text-align: center;
+        }
+
+        main {
+            padding: 20px;
+        }
+
+        h1, h2, h3 {
+            color: #002d72;
+        }
+
+        section {
+            margin-bottom: 30px;
+        }
+
+        ul {
+            margin: 10px 0;
+            padding-left: 20px;
+        }
+
+        li {
+            margin-bottom: 5px;
+        }
+
+        .section-title {
+            background-color: #ddd;
+            padding: 5px;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
-	<header>
-		<h1>Portafolio de evidencias</h1>
-	</header>
-	<h1>Programación web 1</h1>
+
+    <header>
+        <h1>Portafolio de evidencias</h1>
+        <p>Programación web I | Ingeniería en Tecnologías de la Información | Primavera 2025</p>
+    </header>
+
+    <main>
+        <h2>Universidad Politécnica de San Luis Potosí</h2>
+        <p>Alumno: <strong><!-- Andrea Michelle Castillo Martínez--></strong></p>
+        <p>Profesora: MC Imelda Deyanira Hernández Martínez</p>
+
+        <!-- Sobre el Alumno -->
+        <section>
+            <h3>Sobre el alumno</h3>
+            <article>
+                <p><!-- Aquí escribe tu autobiografía --></p>
+            </article>
+        </section>
+
+        <!-- Misión, Visión y Objetivo de la materia -->
+        <section>
+            <h3>Misión, Visión y Objetivo de la materia</h3>
+            <div>
+                <p><strong>Misión:</strong> <!-- Misión de la carrera --></p>
+                <p><strong>Visión:</strong> <!-- Visión de la carrera --></p>
+                <p><strong>Objetivo de la materia:</strong> <!-- Objetivo de la materia --></p>
+            </div>
+        </section>
+
+        <!-- Consideraciones sobre las sesiones -->
+        <section>
+            <h3>Consideraciones sobre las sesiones</h3>
+            <ol>
+                <li><!-- Consideración 1 --></li>
+                <li><!-- Consideración 2 --></li>
+                <li><!-- Consideración 3 --></li>
+                <!-- Agrega más según sea necesario -->
+            </ol>
+        </section>
+
+        <!-- Contenido de la materia -->
+        <section>
+            <h3>Contenido de la materia</h3>
+            <ol>
+                <li><!-- Tema 1 --></li>
+                <li><!-- Tema 2 --></li>
+                <li><!-- Tema 3 --></li>
+                <!-- Agrega más temas si es necesario -->
+            </ol>
+        </section>
+
+        <!-- Prácticas - Portafolio -->
+        <section>
+            <h3>Prácticas - Portafolio</h3>
+            <ul>
+                <li><!-- Práctica 1 --></li>
+                <li><!-- Práctica 2 --></li>
+                <li><!-- Práctica 3 --></li>
+                <!-- Agrega más prácticas si es necesario -->
+            </ul>
+        </section>
+
+    </main>
+
 </body>
 </html>
+
