Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -4,115 +4,72 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio de evidencias</title>
-    <link rel="icon" href="logo.png" type="image/png"> <!--logo-->
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-
-        header {
-            background-color: #002d72;
-            color: white;
-            padding: 10px 0;
-            text-align: center;
-        }
-
-        main {
-            padding: 20px;
-        }
-
-        h1, h2, h3 {
-            color: #002d72;
-        }
-
-        section {
-            margin-bottom: 30px;
-        }
-
-        ul {
-            margin: 10px 0;
-            padding-left: 20px;
-        }
-
-        li {
-            margin-bottom: 5px;
-        }
-
-        .section-title {
-            background-color: #ddd;
-            padding: 5px;
-            font-weight: bold;
-        }
-    </style>
+    <link rel="icon" href="ruta_del_favicon.ico" type="image/x-icon"> 
 </head>
 <body>
-
     <header>
         <h1>Portafolio de evidencias</h1>
-        <p>Programación web I | Ingeniería en Tecnologías de la Información | Primavera 2025</p>
+        <h2>Programación web I</h2>
+        <h2>Ingeniería en Tecnologías de la Información</h2>
+        <h2>Primavera 2025</h2>
     </header>
 
-    <main>
+    <section>
         <h2>Universidad Politécnica de San Luis Potosí</h2>
-        <p>Alumno: <strong><!-- Andrea Michelle Castillo Martínez--></strong></p>
-        <p>Profesora: MC Imelda Deyanira Hernández Martínez</p>
+        <p>Alumno: Andrea Michelle Castillo Martínez</p>
+        <p>Matricula: 187210</p>
+        <p>Profesora: M.C. Imelda Deyanira Hernández Martínez</p>
+    </section>
 
-        <!-- Sobre el Alumno -->
-        <section>
-            <h3>Sobre el alumno</h3>
-            <article>
-                <p><!-- Aquí escribe tu autobiografía --></p>
-            </article>
-        </section>
+    <section>
+        <h2>Sobre el alumno</h2>
+        <article>
+            <h3>Autobiografía</h3>
+            <p>Mi nombre es Andrea Michelle Castillo Martínez, tengo 18 años. Nací en el estado de San Luis Potosí un 27 de junio de 2006. Mis padres son Judit Martínez Colunga y Aaron Felipe Castillo Picazzo, tengo un hermano llamado Dante Demian. Acerca de mis estudios, puedo decir que estudié el kinder en Francisco Hermanos Tres Guerras, la primaria en Rosario Castellanos y la preparatoria en COBACH 28. Actualmente, estoy cursando la universidad en la Universidad Politécnica de San Luis Potosí y me encuentro en segundo semestre de la carrera de Ingeniería en Tecnologías de la Información.</p>
+        </article>
+    </section>
 
-        <!-- Misión, Visión y Objetivo de la materia -->
-        <section>
-            <h3>Misión, Visión y Objetivo de la materia</h3>
-            <div>
-                <p><strong>Misión:</strong> <!-- Misión de la carrera --></p>
-                <p><strong>Visión:</strong> <!-- Visión de la carrera --></p>
-                <p><strong>Objetivo de la materia:</strong> <!-- Objetivo de la materia --></p>
-            </div>
-        </section>
+    <section>
+        <h2>Misión de la Carrera</h2>
+        <p>“El Programa Educativo de la carrera de Ingeniería en Tecnologías de la Información está comprometido con la excelencia en la formación integral y humana, y con el aprendizaje, el desarrollo y aplicación del conocimiento en los campos de desarrollo e implementación de software, ofreciendo una solución integral a los problemas asociados con el área computacional. Está comprometido con la sociedad para mantener una oferta educativa pertinente en el área y desarrollar investigación aplicada involucrando alumnos en la solución de problemas tecnológicos de la sociedad.”</p>
 
-        <!-- Consideraciones sobre las sesiones -->
-        <section>
-            <h3>Consideraciones sobre las sesiones</h3>
-            <ol>
-                <li><!-- Consideración 1 --></li>
-                <li><!-- Consideración 2 --></li>
-                <li><!-- Consideración 3 --></li>
-                <!-- Agrega más según sea necesario -->
-            </ol>
-        </section>
+        <h2>Visión de la Carrera</h2>
+        <p>“La UPSLP y su programa educativo de Ingeniería en Tecnologías de la Información entregan a la sociedad alumnos formados con los más altos estándares profesionales. Egresados que tienen en su haber las competencias pertinentes a las necesidades de su entorno, y un buen porcentaje de ellos realiza estudios de posgrado en el país o en el extranjero. Además, cuentan con varias certificaciones de importancia en el área, actuales y con reconocimiento internacional. Con un nivel de inglés muy aceptable, certificado por el British Council. Tienen experiencia práctica adquirida en los laboratorios, en el estudio de casos y en su estancia profesional. Son hábiles en el manejo de las nuevas tecnologías y reconocen el proceso de aprendizaje como una necesidad permanente.”</p>
 
-        <!-- Contenido de la materia -->
-        <section>
-            <h3>Contenido de la materia</h3>
-            <ol>
-                <li><!-- Tema 1 --></li>
-                <li><!-- Tema 2 --></li>
-                <li><!-- Tema 3 --></li>
-                <!-- Agrega más temas si es necesario -->
-            </ol>
-        </section>
+        <h2>Objetivo de la materia</h2>
+        <p>El alumno desarrollará las habilidades necesarias en el uso del lenguaje de hipertexto, hojas de estilo en cascada (CSS) y JavaScript; analizará, diseñará y creará sitios que cumplan con los requerimientos y necesidades de la institución, para la cual se implantará, además los publicará y administrará.</p>
+    </section>
 
-        <!-- Prácticas - Portafolio -->
-        <section>
-            <h3>Prácticas - Portafolio</h3>
-            <ul>
-                <li><!-- Práctica 1 --></li>
-                <li><!-- Práctica 2 --></li>
-                <li><!-- Práctica 3 --></li>
-                <!-- Agrega más prácticas si es necesario -->
-            </ul>
-        </section>
+    <section>
+        <h2>Consideraciones sobre las sesiones</h2>
+        <ol>
+            <li>Todas las sesiones son de Lunes a Viernes en los horarios marcados para la asignatura.</li>
+            <li>Asistencia obligatoria del 90% al curso.</li>
+            <li>El material que sea facilitado durante las clases, se encontrará disponible en el curso de Teams correspondiente; y en caso necesario en la carpeta de Público.</li>
+            <li>Las tareas se reciben en la fecha estipulada como fecha de entrega; y solamente por la vía indicada. No se aceptan tareas por correo electrónico.</li>
+        </ol>
+    </section>
 
-    </main>
+    <section>
+        <h2>Contenido de la materia</h2>
+        <ol>
+            <li>introducción y diseño web</li>
+            <li>lenguaje html</li>
+            <li>lenguaje html avanzado</li>
+            <li>hojas de estilo css</li>
+            <li>javascript, sitios responsivos</li>
+        </ol>
+    </section>
 
+    <section>
+        <h2>Prácticas</h2>
+        <ul>
+            <li>Práctica 1</li>
+            <li>Práctica 2</li>
+            <li>Práctica 3</li>
+            <!-- Añadir más prácticas según sea necesario -->
+        </ul>
+    </section>
 </body>
 </html>
 
