Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio de evidencias</title>
-    <link rel="icon" href="ruta_del_favicon.ico" type="image/x-icon"> 
+    <link rel="icon"  type="image/png"> href="prograweb1/logo.png"
 </head>
 <body>
     <header>
@@ -67,7 +67,7 @@
             <li>Práctica 1</li>
             <li>Práctica 2</li>
             <li>Práctica 3</li>
-            <!-- Añadir más prácticas según sea necesario -->
+             
         </ul>
     </section>
 </body>
