--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio de evidencias</title>
-    <link rel="icon"  type="image/png"> href="prograweb1/logo.png"
+    <link rel="icon"  type="image/png"> href="logo.png"
 </head>
 <body>
     <header>
