--- a/187210_Examen_practico_parcial1.html
+++ b/187210_Examen_practico_parcial1.html
@@ -3,9 +3,81 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Programación web I prim 2025</title>
+	<title>Examen_Práctico</title>
+	<style>
+		body{
+			background-color: lightpink;
+		}
+		table{
+			margin: auto;
+		}
+		h1{
+			text-align: center;
+			color: darkblue;
+		}
+		h3{
+			text-align: center;
+			color: black;
+		}
+		h3{
+			text-align: center;
+		}
+	</style>
 </head>
 <body>
-
+	<header>
+		<section>
+			<h1>
+		Programación Web I PRIM25
+		</h1>
+		<h3 style="color: royalblue;">
+		Evaluación práctica Parcial 1
+		</h3>
+		<h3 style="color:mediumvioletred;">
+		Profesora: M.C. Imelda Deyanira Hernández Martínez
+		</h3>
+		<h3 style="color:mediumvioletred;">
+			Alumna: Andrea Michelle Castillo Martínez
+		</h3>
+		</section>
+	</header>
+	<table>
+		<thead>
+			<tr>
+				<th>
+					<p style="background-color: indianred; color: white;">
+					Visita San Luis Potosí
+					</p>
+				</th>
+				<th>
+					<a target="pagina" href="https://sitio.sanluis.gob.mx/SanLuisPotoSi/" width="300" height="250"><img src="mapa_sanluis.jpg"></a>
+				</th>
+				<th>
+					<h3><iframe src="" name="pagina"></iframe></h3>
+				</th>
+			</tr>
+			<tr>
+				<th>
+					<img src="de-paseo-por-el-centro.jpg" width="300" height="250">
+				</th>
+				<th>
+					<img src="-San-Luis-Potosi.jpg" width="300" height="250">
+				</th>
+				<th>
+					<img src="73642956.jpg" width="300" height="250">
+				</th>
+			</tr>
+		</thead>
+	</table>
+	<footer>
+		<h3 style="background-color: indianred; color: white;">
+			Universidad Politécnica de San Luis Potosí
+		</h3>
+	</footer>
+	<address>
+		<p>
+		Urbano Villalón 500. Col. La Ladrillera
+		</p>
+	</address>
 </body>
 </html>
