Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio de evidencias</title>
-    <link rel="icon"  type="image/png" href="logo.png">
+    <link rel="icon" type="image/png" href="logo.png">
 </head>
 <body>
     <header>
@@ -54,24 +53,34 @@
     <section>
         <h2>Contenido de la materia</h2>
         <ol>
-            <li>introducción y diseño web</li>
-            <li>lenguaje html</li>
-            <li>lenguaje html avanzado</li>
-            <li>hojas de estilo css</li>
-            <li>javascript, sitios responsivos</li>
+            <li>Introducción y diseño web</li>
+            <li>Lenguaje HTML</li>
+            <li>Lenguaje HTML avanzado</li>
+            <li>Hojas de estilo CSS</li>
+            <li>JavaScript, sitios responsivos</li>
         </ol>
     </section>
 
     <section>
-        <h2>Prácticas</h2>
+        <h2>Prácticas Parcial 1</h2>
         <ul>
-         <a href=""><li>Práctica 1</li></a>
-         <a href=""><li>Práctica 2</li></a>
-         <a href=""><li>Práctica 3</li></a>
-         <a href="187210_Examen_practico_parcial1"><li>Examen Práctico</li></a>
+            <a href=""><li>Práctica 1</li></a>
+            <a href=""><li>Práctica 2</li></a>
+            <a href=""><li>Práctica 3</li></a>
+            <a href="187210_Examen_practico_parcial1"><li>Examen Práctico</li></a>
         </ul>
     </section>
-    
+
+    <!-- Nueva sección para el Parcial 2 -->
+    <section>
+        <h2>Prácticas Parcial 2</h2>
+        <ul>
+            <a href=""><li>Práctica 4</li></a>
+            <a href=""><li>Práctica 5</li></a>
+            <a href=""><li>Práctica 6</li></a>
+            <a href="187210_Examen_practico_parcial2"><li>Examen Práctico</li></a>
+        </ul>
+    </section>
+
 </body>
 </html>
-
