--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <section>
         <h2>Prácticas Parcial 2</h2>
         <ul>
-            <a href=""><li>Práctica 4</li></a>
+            <a href="p1p2.html"><li>Práctica 1</li></a>
             <a href=""><li>Práctica 5</li></a>
             <a href=""><li>Práctica 6</li></a>
             <a href="187210_Examen_practico_parcial2"><li>Examen Práctico</li></a>
