--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <h2>Prácticas Parcial 2</h2>
         <ul>
             <a href="p1p2.html"><li>Práctica 1</li></a>
-            <a href=""><practicaforms.html>Práctica 2</li></a>
+            <a href="practicaforms.html"><li>Práctica 2</li></a>
             <a href=""><li>Práctica 6</li></a>
             <a href="187210_Examen_practico_parcial2"><li>Examen Práctico</li></a>
         </ul>
