--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <ul>
             <a href="p1p2.html"><li>Práctica 1</li></a>
             <a href="practicaforms.html"><li>Práctica 2</li></a>
-            <a href=""><li>Práctica 6</li></a>
+            <a href="estilos1 2.css"><li>Práctica 3</li></a>
     <link rel="stylesheet" href="estilos1 2.css">
             <a href="187210_Examen_practico_parcial2"><li>Examen Práctico</li></a>
         </ul>
