--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <a href="practicaforms.html"><li>Práctica 2</li></a>
             <a href="estilos1 2.css"><li>Práctica 3</li></a>
     <link rel="stylesheet" href="estilos1 2.css">
-            <a href="187210_Examen_practico_parcial2"><li>Examen Práctico</li></a>
+            <a href="Examenprac2.html"><li>Examen Práctico</li></a>
         </ul>
     </section>
 
