--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
         <ul>
             <a href="p1p2.html"><li>Práctica 1</li></a>
             <a href="practicaforms.html"><li>Práctica 2</li></a>
-            <a href="estilos1 2.css"><li>Práctica 3</li></a>
-    <link rel="stylesheet" href="estilos1 2.css">
+            <a href="Tablas_p2_p3prac.html"><li>Práctica 3</li></a>
+             <a href="Barra Nav 1.html"><li>Práctica 4</li></a>
             <a href="Examenprac2.html"><li>Examen Práctico</li></a>
         </ul>
     </section>
