--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
             <a href="practicaforms.html"><li>Práctica 2</li></a>
             <a href="Tablas_p2_p3prac.html"><li>Práctica 3</li></a>
             <a href="Barra Nav 1.html"><li>Práctica 4</li></a>
+            <a href="Barra Nav Fija.html"><li>Práctica 5</li></a>
             <a href="Examenprac2.html"><li>Examen Práctico</li></a>
         </ul>
     </section>
