--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
             <a href="Tablas_p2_p3prac.html"><li>Práctica 3</li></a>
             <a href="Barra Nav 1.html"><li>Práctica 4</li></a>
             <a href="Barra Nav Fija.html"><li>Práctica 5</li></a>
+            <a href="Flex2.html"><li>Práctica 7</li></a>
+            <a href="propiedad_position.html"><li>Práctica 8</li></a>
+            <a href="unidades_medida.html"><li>Práctica 9</li></a>
             <a href="Examenprac2.html"><li>Examen Práctico</li></a>
         </ul>
     </section>
