--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Portafolio de evidencias</title>
     <link rel="icon" type="image/png" href="logo.png">
 </head>
-<body>
+<body background-color:ligthpink;>
     <header>
         <h1>Portafolio de evidencias</h1>
         <h2>Programación web I</h2>
