--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <ul>
             <a href="p1p2.html"><li>Práctica 1</li></a>
             <a href="practicaforms.html"><li>Práctica 2</li></a>
-            <a href="Tablas_p2_p3prac.html"><li>Práctica 3</li></a>
+            <a href="prac3p2.html"><li>Práctica 3</li></a>
             <a href="Barra Nav 1.html"><li>Práctica 4</li></a>
             <a href="Barra Nav Fija.html"><li>Práctica 5</li></a>
             <a href="Flex2.html"><li>Práctica 7</li></a>
