--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <h2>Prácticas Parcial 3</h2>
         <ul>
             <a href="opjava.html"><li>Práctica 1</li></a>
-            <a href="practicaforms.html"><li>Práctica 2</li></a>
+            <a href="formsjava.html"><li>Práctica 2</li></a>
             <a href="prac3p2.html"><li>Práctica 3</li></a>
             <a href="Barra Nav 1.html"><li>Práctica 4</li></a>
             <a href="Barra Nav Fija.html"><li>Práctica 5</li></a>
