--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <a href="opjava.html"><li>Práctica 1</li></a>
             <a href="formsjava.html"><li>Práctica 2</li></a>
             <a href="prac3p2.html"><li>Práctica 3</li></a>
-            <a href="187210examenparcial.html"><li>Examen practico 3</li></a>
+            <a href="187210examenparcial3.html"><li>Examen practico 3</li></a>
             <a href="Barra Nav Fija.html"><li>Práctica 5</li></a>
             <a href="Flex2.html"><li>Práctica 7</li></a>
             <a href="propiedad_position.html"><li>Práctica 8</li></a>
