--- a/index.html
+++ b/index.html
@@ -92,13 +92,9 @@
         <ul>
             <a href="opjava.html"><li>Práctica 1</li></a>
             <a href="formsjava.html"><li>Práctica 2</li></a>
-            <a href="prac3p2.html"><li>Práctica 3</li></a>
+            <a href="Practica_3.html"><li>Práctica 3</li></a>
             <a href="187210examenparcial3.html"><li>Examen practico 3</li></a>
-            <a href="Barra Nav Fija.html"><li>Práctica 5</li></a>
-            <a href="Flex2.html"><li>Práctica 7</li></a>
-            <a href="propiedad_position.html"><li>Práctica 8</li></a>
-            <a href="unidades_medida.html"><li>Práctica 9</li></a>
-            <a href="Examenprac2.html"><li>Examen Práctico</li></a>
+           
         </ul>
     </section>
 
